# FinSearch-AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  MIGRATION_MAPPING.md  MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  MVP_DATA_GUIDE.md  README.md  check_edgar_format.py  chunk_documents.py  docker-compose.yml  ingest_bm25_index.py  ingest_chunks_to_vectordb.py  ingest_manual_transcripts.py  ingest_to_vectordb.py  migrate_structure.py  pyproject.toml  requirements.txt  setup.py  test_embedding_demo.py  validate_hybrid_search.py
_archive_old_structure/: .dockerignore  .env.example
_archive_old_structure/old_scripts/: enrich_metadata.py  ingest_mvp_data.py  migrate_structure.py  migrate_to_normalized_format.py  (+2 more)
backend/: .env.example  Dockerfile  cli_chat.py  finsearch  requirements.txt
configs/: default.yaml
docs/: README.md
evaluation/: EVALUATION_PIPELINE_PLAN.md  README.md  SIMPLE_EVALUATION_PLAN.md  bm25_evaluation_results_20251115_232935.json  evaluation_detailed_review_with_reranker.md  evaluation_detailed_review_with_year_filtering.md  evaluation_results_20251115_132026.json  evaluation_results_20251115_132321.json  evaluation_results_20251115_231744.json  evaluation_results_20251115_232306.json  evaluation_results_20251116_004830.json  evaluation_results_20251116_010954.json  evaluation_review.md  evaluation_review_with_reranker.md  final_comparison.md  hybrid_search_comparison.md  reranker_comparison_report.md  retrieval_eval_dataset.json  run_bm25_evaluation.py  run_evaluation.py  year_filtering_comparison.md
frontend/: index.html  package.json
notebooks/: 01_rag_pipeline_experiments.ipynb
scripts/: EMBEDDING_GUIDE.md  embed_cli.py  evaluate.py  generate_evaluation_report.py  process_documents.py  rag_cli.py  serve_api.py
tests/: TESTING.md  test_edgar_simple.py  test_ingestion.py
(+800 files in other folders)
